--- a/packages/heroes-homm1-react/src/editor/EditorVerticalScroll/EditorVerticalScroll.module.scss
+++ b/packages/heroes-homm1-react/src/editor/EditorVerticalScroll/EditorVerticalScroll.module.scss
@@ -16,10 +16,18 @@
   left: 0;
 }
 
-.background {
+.track {
   position: absolute;
   top: 16px;
   left: 0;
+  width: 16px;
+  height: 416px;
+  padding: 3px 4px;
+  background: url("./assets/track.jpg");
+}
+
+.thumb {
+  position: absolute;
 }
 
 .down {
@@ -27,10 +35,4 @@
 
   bottom: 0;
   left: 0;
-}
-
-.block {
-  position: absolute;
-  top: 16px + 3px;
-  left: 4px;
 }
