--- a/packages/heroes-homm1-react/src/map/MapTile/MapTile.module.scss
+++ b/packages/heroes-homm1-react/src/map/MapTile/MapTile.module.scss
@@ -53,4 +53,15 @@
   bottom: 0;
   left: 0;
   z-index: 1;
+  pointer-events: none;
+}
+
+.active {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  border: 2px solid #fff;
 }
