implement main window (closes #70)

--- a/packages/heroes-homm1-react/src/MainWindow/MainWindow.module.scss
+++ b/packages/heroes-homm1-react/src/MainWindow/MainWindow.module.scss
@@ -1,4 +1,7 @@
 .root {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
   width: 640px;
   height: 480px;
   padding: 20px 10px;
