--- a/packages/heroes-homm1-react/src/CreditsWindow/CreditsWindow.module.scss
+++ b/packages/heroes-homm1-react/src/CreditsWindow/CreditsWindow.module.scss
@@ -1,5 +1,7 @@
+@import "../style/index";
+
 .root {
-  width: 640px;
-  height: 480px;
+  @include screen();
+
   background: url("./assets/background.jpg");
 }
