--- a/packages/heroes-homm1-react/src/TownDetailWindow/TownDetailWindow.module.scss
+++ b/packages/heroes-homm1-react/src/TownDetailWindow/TownDetailWindow.module.scss
@@ -1,6 +1,8 @@
+@import "../style/index";
+
 .root {
   position: relative;
-  width: 640px;
+  width: $SCREEN_WIDTH;
   height: 262px;
   background: url("./assets/background.jpg");
 }
