--- a/packages/heroes-homm1-react/src/base/GameInput/GameInput.module.scss
+++ b/packages/heroes-homm1-react/src/base/GameInput/GameInput.module.scss
@@ -1,6 +1,8 @@
+@import "../../style/index";
+
 .root {
   width: 271px;
-  color: #fff;
+  color: $TEXT_COLOR;
   text-align: center;
   border: none;
   border-radius: 0;
