--- a/packages/heroes-homm1-react/src/FileSelectorWindow/FileSelectorWindow.module.scss
+++ b/packages/heroes-homm1-react/src/FileSelectorWindow/FileSelectorWindow.module.scss
@@ -1,3 +1,5 @@
+@import "../style/index";
+
 .root {
   position: relative;
   width: 320px;
@@ -36,7 +38,7 @@
   left: 48px;
   width: 225px;
   height: 19px;
-  color: #fff;
+  color: $TEXT_COLOR;
   text-align: center;
   background: url("./assets/input-background.jpg");
   border: none;
