--- a/packages/heroes-homm1-react/src/HighScoresWindow/HighScoresWindow.module.scss
+++ b/packages/heroes-homm1-react/src/HighScoresWindow/HighScoresWindow.module.scss
@@ -1,7 +1,9 @@
+@import "../style/index";
+
 .root {
+  @include screen();
+
   position: relative;
-  width: 640px;
-  height: 480px;
   background: url("./assets/background.jpg");
 }
 
