--- a/packages/heroes-homm1-react/src/style/_game.scss
+++ b/packages/heroes-homm1-react/src/style/_game.scss
@@ -14,3 +14,13 @@
   width: 101px;
   height: 93px;
 }
+
+@mixin troopSlot() {
+  width: 82px;
+  height: 93px;
+}
+
+@mixin skillSlot() {
+  width: 82px;
+  height: 93px;
+}
