--- a/packages/heroes-homm1-react/src/editor/EditorWindow/EditorWindow.module.scss
+++ b/packages/heroes-homm1-react/src/editor/EditorWindow/EditorWindow.module.scss
@@ -7,7 +7,7 @@
   background: url("./assets/background.jpg");
 }
 
-.adventure-window {
+.adventure-map {
   position: absolute;
   top: 16px;
   left: 16px;
