--- a/packages/heroes-homm1-react/src/StandardScenarioInfoWindow/StandardScenarioInfoWindow.module.scss
+++ b/packages/heroes-homm1-react/src/StandardScenarioInfoWindow/StandardScenarioInfoWindow.module.scss
@@ -25,7 +25,7 @@
   text-align: right;
 }
 
-.alignment {
+.player-color {
   position: absolute;
   top: 153px;
   left: 124px;
@@ -62,8 +62,10 @@
 .scenario-description {
   position: absolute;
   top: 335px;
-  right: 25px;
-  left: 25px;
+  left: 30px;
+  width: 267px;
+  height: 65px;
+  overflow-y: scroll;
   text-align: center;
 }
 
