implement adventure map window (closes #93)

--- a/packages/heroes-homm1-react/src/AdventureMapWindow/AdventureMapWindow.module.scss
+++ b/packages/heroes-homm1-react/src/AdventureMapWindow/AdventureMapWindow.module.scss
@@ -3,6 +3,5 @@
 .root {
   display: flex;
   flex-wrap: wrap;
-  width: 14 * $MAP_TILE_SIZE;
-  height: 14 * $MAP_TILE_SIZE;
+  overflow: hidden;
 }
